MovieStarter/src/main/java/com/example/MovieStarter/Errors/ErrorCodes.java
package com.example.MovieStarter.Errors;

public enum ErrorCodes {
    Unknown,
    TechnicalError,
    EntityNotFound,
    PhysicalFileNotFound,
    UserAlreadyExists,
    WrongPassword,
    CannotAdd,
    CannotUpdate,
    CannotDelete,
    MailSendFailed

}
